overflow fix

--- a/projects/chat-client/src/app/chat-window/chat-window.component.scss
+++ b/projects/chat-client/src/app/chat-window/chat-window.component.scss
@@ -13,5 +13,5 @@
 }
 mat-card {
   max-height: 80vh;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
